# dde-cooperation

./: .goosehints  CMakeLists.txt  clean_build.bat  test-prj-running.sh  wix_build.bat
.reuse/: dep5
debian/: control  (+5 more)
src/compat/: CMakeLists.txt
src/compat/common/: commonutils.cpp
src/compat/plugins/daemon/core/: CMakeLists.txt
src/compat/protocol/: message.pb.cc  message.pb.h  update_proto.sh
src/infrastructure/: CMakeLists.txt  android-uuid.cmake  asio.cmake
src/infrastructure/basekit/: CMakeLists.txt  fmt.cmake
src/infrastructure/basekit/include/common/: uint256.inl
src/infrastructure/basekit/include/containers/: hashmap.h  hashmap.inl
src/infrastructure/basekit/tests/cache/: filecache_test.cpp
src/infrastructure/basekit/tests/common/: reader_writer_test.cpp  uint_test.cpp
src/infrastructure/basekit/tests/containers/: hashmap_test.cpp
src/infrastructure/basekit/tests/errors/: exceptions_handler_test.cpp  exceptions_test.cpp  system_error_test.cpp
src/infrastructure/basekit/tests/filesystem/: directory_test.cpp  file_buffer_test.cpp  file_readall_test.cpp  file_test.cpp  path_advanced_test.cpp  path_edge_test.cpp  path_extra_test.cpp  path_manip_extra_test.cpp  path_status_test.cpp  symlink_test.cpp
src/infrastructure/basekit/tests/string/: encoding_test.cpp
src/infrastructure/basekit/tests/system/: console_color_test.cpp  console_test.cpp  dll_extra_test.cpp  pipe_extra_test.cpp  process_extra_test.cpp  process_test.cpp  shared_memory_test.cpp  stack_trace_test.cpp  system_test.cpp  uuid_test.cpp
src/infrastructure/basekit/tests/threads/: file_lock_test.cpp  named_rw_lock_test.cpp  named_threads_test.cpp  sync_extra_test.cpp  thread_extra_test.cpp  thread_priority_test.cpp  thread_test.cpp  threads_test.cpp
src/infrastructure/basekit/tests/time/: time_test.cpp
src/infrastructure/logging/: CMakeLists.txt
src/infrastructure/logging/tests/: CMakeLists.txt  extra_appender_test.cpp  layout_processor_test.cpp  layout_test.cpp  processor_test.cpp  record_format_test.cpp  rolling_appender_extra_test.cpp  rolling_appender_test.cpp  text_layout_extra_test.cpp
src/infrastructure/netutil/: CMakeLists.txt
src/infrastructure/netutil/tests/: CMakeLists.txt
src/infrastructure/sslconf/: CMakeLists.txt
src/infrastructure/sslconf/include/: sslcertconf.h
src/infrastructure/sslconf/src/: sslcertconf.cpp
src/input-emitter/: InputEmitter.cc  InputEmitter.h  main.cc  meson.build
tests/: CMakeLists.txt
tests/common/: stub.h
tests/compat/: CMakeLists.txt  commonstruct_test.cpp  event_test.cpp  lifecycle_private_test.cpp  lifecycle_test.cpp  zrpc_extra_test.cpp  zrpc_test.cpp
tests/coop/: CMakeLists.txt  addr_pri.h  commandparser_test.cpp  commonutils_test.cpp  compatstruct_test.cpp  compatwrapper_test.cpp  configmanager_test.cpp  cooconfig_test.cpp  cooperation_extra_test.cpp  cooperationutil_test.cpp  dfmconfig_test.cpp  discover_safe_test.cpp  discover_test.cpp  filesystem_test.cpp  helper_test.cpp  historymanager_test.cpp  main.cpp  networkutil_stub_test.cpp  phone_smoke_test.cpp  phonehelper_test.cpp  reportlog_test.cpp  settings_test.cpp  sharecooperationservice_test.cpp  sharehelper_test.cpp  taskdialog_test.cpp  transferhelper_core_test.cpp  transferwrapper_test.cpp
tests/coop_gui/: CMakeLists.txt  backgroundwidget_test.cpp  coop_searchedit_stub.cpp  cooperationdialog_test.cpp  cooperationguihelper_test.cpp  cooperationstatewidget_test.cpp  cooperationtaskdialog_test.cpp  deviceitem_test.cpp  devicelistwidget_test.cpp  discovercontroller_test.cpp  filechooseredit_test.cpp  firsttipwidget_test.cpp  main.cpp  mainwindow_test.cpp  phonewidget_test.cpp  qt2keysum_test.cpp  screenmirroringwindow_test.cpp  settingdialog_test.cpp  settingitem_test.cpp  sortfilterworker_test.cpp  stub.h  vncrecvthread_vncsendworker_test.cpp  vncviewer_test.cpp  workspacewidget_test.cpp
tests/daemon/: CMakeLists.txt  comshare_test.cpp  config_test.cpp  daemonplugin_test.cpp  discoveryjob_test.cpp  fsadapter_test.cpp  handleipc_test.cpp  handlerpc_test.cpp  handlesendresult_test.cpp  jobmanager_test.cpp  main.cpp  remoteservice_test.cpp  searchlight_test.cpp  sendipc_test.cpp  sendrpc_test.cpp  servicemanager_test.cpp  session_test.cpp  stub.h  transferjob_test.cpp  util_test.cpp
tests/dfmplugin/: CMakeLists.txt  addr_pri.h  configmanager_test.cpp  cooperationhelper_test.cpp  cooperationmenuscene_test.cpp  cooperationplugin_test.cpp  dconfigmanager_test.cpp  filetransfersettingsdialog_test.cpp  main.cpp  reportlog_test.cpp  settings_test.cpp  stub.h
tests/dt/: CMakeLists.txt  main.cpp  mainwindow_test.cpp  networkutil_stub.cpp  optionsmanager_test.cpp  settinghepler_test.cpp  transferhepler_test.cpp  transferutil_test.cpp  type_defines_test.cpp  upload_test.cpp  widgets_test.cpp
tests/logging/: CMakeLists.txt  main.cpp  misc_appender_test.cpp  rolling_appender_test.cpp
tests/logic/: CMakeLists.txt  fileclient_test.cpp  fileserver_test.cpp  httpweb_extra_test.cpp  httpweb_fork_test.cpp  httpweb_struct_test.cpp  httpweb_stub_test.cpp  main.cpp  networkutil_test.cpp  proto_test.cpp  session_test.cpp  stub.h  tokencache_test.cpp  webbinder_test.cpp  webproto_test.cpp
tests/manager/: CMakeLists.txt  filesizecounter_test.cpp  main.cpp  sessionmanager_test.cpp  sessionworker_test.cpp  transferworker_test.cpp
tests/session_core/: cooperationcore_test.cpp  discover_extra_test.cpp  protoclient_server_test.cpp  protoendpoint_test.cpp  session_core_deep_test.cpp  session_integration_test.cpp
tests/singleton/: CMakeLists.txt  main.cpp  singleapplication_test.cpp
tests/slotipc/: CMakeLists.txt  interface_test.cpp  interfaceworker_test.cpp  main.cpp  marshaller_test.cpp  message_test.cpp  rpc_test.cpp  service_test.cpp  signalhandler_test.cpp  testsubject.h
tests/sslconf/: CMakeLists.txt  confstring_test.cpp  datadirectories_test.cpp  filesystem_test.cpp  fingerprintdata_test.cpp  fingerprintdatabase_test.cpp  main.cpp  secureutils_test.cpp  sslcertconf_test.cpp
tests/transfer_helper/: CMakeLists.txt  main.cpp  mainwindow_stub.cpp  transferhelper_ct_test.cpp
(+576 files in other folders)
